[tool.poetry]
name = "espn-fantasy-football"
version = "0.1.0"
description = "Connect to unpublished ESPN API"
authors = ["AMP <amp@mediamonks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
Flask = "^2.1.3"
google-cloud-bigquery = "~3.11.0"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pylint = "*"
black = "*"
functions-framework = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"